crates/htui/tests/snapshots/backlog__runs_flow_tool_chips.snap
---
source: crates/htui/tests/backlog.rs
expression: frame
---
Platform · DESKTOP-HTUI · memory · 1 run
 1 Backlog
┌ Backlog (11) ───────────────────────────────────────┐┌ FEAT-1 ───────────────────────────────────┐
│▾ htui (8)                                           ││ Body Runs Graph Docs Notes Prompt Reqs    │
│  ANA-1    done               Data model, box regist…││graph  done      DESKTOP-HTUI 09-02 08:00  │
│  ANA-2    open               Orchestrator step grap…││manual                        09-02 12:00  │
│  CLEAN-1  failed             Drop the legacy markdo…││                                           │
│  FEAT-1   in_progress        TUI scaffold           ││           ┌──────────────────┐            │
│  FEAT-2   blocked            Agent driver and chat …││           │0.1 done          │            │
│  FEAT-3   queued             Postgres store and cac…││           │prd               │            │
│  FIX-1    closed             Terminal left raw afte…││           │                  │            │
│  TOOL-1   awaiting_approval  CI matrix for the thre…││           └──────────────────┘            │
│▾ agy (3)                                            ││                     │                     │
│  ANA-1    done               Prompt assembly survey ││                     │                     │
│  FEAT-1   open               ACP transport upgrade  ││                     ▼                     │
│  FIX-1    open               Session leak on cancel ││           ┌──────────────────┐            │
│                                                     ││           │1.1 done          │            │
│                                                     ││           │plan              │            │
│                                                     ││           │⚒ read×1          │            │
│                                                     ││           └──────────────────┘            │
│                                                     ││                     │                     │
│                                                     ││                     │                     │
│                                                     ││                     ▼                     │
│                                                     ││           ┌──────────────────┐            │
│                                                     ││           │2.1 done          │            │
│                                                     ││           │implement         │            │
│                                                     ││           │                  │            │
│                                                     ││           └──────────────────┘            │
└─────────────────────────────────────────────────────┘└───────────────────────────────────────────┘
q quit · Tab next tab · Shift+Tab previous tab · 1 select tab · ? help
