crates/htui/tests/snapshots/backlog__runs_pending_permission.snap
---
source: crates/htui/tests/backlog.rs
expression: frame
---
Platform · DESKTOP-HTUI · memory · 0 working · 2 waiting
 1 Backlog
┌ Backlog (11) ───────────────────────────────────────┐┌ FEAT-3 ───────────────────────────────────┐
│▾ htui (8)                                           ││ Body Runs Graph Docs Notes Prompt Reqs    │
│  ANA-1    done               Data model, box regist…││kind   status    box          started      │
│  ANA-2    open               Orchestrator step grap…││mode                          finished     │
│  CLEAN-1  failed             Drop the legacy markdo…││graph  running   DESKTOP-HTUI 09-03 09:00  │
│  FEAT-1   in_progress        TUI scaffold           ││auto                          —            │
│  FEAT-2   blocked            Agent driver and chat …││▸ 0.1   pending    prd              —     —│
│  FEAT-3   in_progress        Postgres store and cac…││        —          claude/sonnet           │
│  FIX-1    closed             Terminal left raw afte…││        asks: execute: cargo test          │
│  TOOL-1   awaiting_approval  CI matrix for the thre…││answer  [1] Allow once  [2] Reject once    │
│▾ agy (3)                                            ││                                           │
│  ANA-1    done               Prompt assembly survey ││                                           │
│  FEAT-1   open               ACP transport upgrade  ││                                           │
│  FIX-1    open               Session leak on cancel ││                                           │
│                                                     ││                                           │
│                                                     ││                                           │
│                                                     ││                                           │
│                                                     ││                                           │
│                                                     ││                                           │
│                                                     ││                                           │
│                                                     ││                                           │
│                                                     ││                                           │
│                                                     ││                                           │
│                                                     ││                                           │
│                                                     ││                                           │
│                                                     ││                                           │
└─────────────────────────────────────────────────────┘└───────────────────────────────────────────┘
q quit · Tab next tab · Shift+Tab previous tab · 1 select tab · ? help
