crates/htui/tests/snapshots/backlog__runs_reject_note.snap
---
source: crates/htui/tests/backlog.rs
expression: harness.render()
---
Platform · DESKTOP-HTUI · memory · 1 working · 1 waiting
 1 Backlog
┌ Backlog (11) ───────────────────────────────────────┐┌ ANA-2 ────────────────────────────────────┐
│▾ htui (8)                                           ││ Body Runs Graph Docs Notes Prompt Reqs    │
│  ANA-1    done               Data model, box regist…││kind   status    box          started      │
│  ANA-2    open               Orchestrator step grap…││mode                          finished     │
│  CLEAN-1  failed             Drop the legacy markdo…││graph  awaiting  DESKTOP-HTUI 09-24 09:00  │
│  FEAT-1   in_progress        TUI scaffold           ││manual                        —            │
│  FEAT-2   blocked            Agent driver and chat …││▸ 0.1   awaiting   research         —    0s│
│  FEAT-3   queued             Postgres store and cac…││        —          ~360 scripted/sonnet    │
│  FIX-1    closed             Terminal left raw afte…││                                           │
│  TOOL-1   awaiting_approval  CI matrix for the thre…││                                           │
│▾ agy (3)                                            ││                                           │
│  ANA-1    done               Prompt assembly survey ││                                           │
│  FEAT-1   open               ACP transport upgrade  ││                                           │
│  FIX-1    open               Session leak on cancel ││                                           │
│                                                     ││                                           │
│                                                     ││                                           │
│                                                     ││                                           │
│                                                     ││                                           │
│                                                     ││                                           │
│                                                     ││                                           │
│                                                     ││                                           │
│                                                     ││                                           │
│                                                     ││                                           │
│                                                     ││reject with a note:                        │
│                                                     ││needs work                                 │
│                                                     ││Enter reject · Esc cancel                  │
└─────────────────────────────────────────────────────┘└───────────────────────────────────────────┘
q quit · Tab next tab · Shift+Tab previous tab · 1 select tab · ? help
